<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="suggestions_authority" translatable="false">com.android.email.suggestionsprovider</string>
    <string name="permission_read_attachment_label">Read email attachments</string>
    <string name="permission_read_attachment_desc">Allows the app to read your email
        attachments.</string>
    <string name="permission_access_provider_label">Access email provider data</string>
    <string name="permission_access_provider_desc">Allows the app to access your email
        database, including received messages, sent messages, usernames, and passwords.</string>
    <string name="app_name">Email</string>
    <string name="compose_title">Compose</string>
    <string name="debug_title">Debug</string>
    <string name="next_action">Next</string>
    <string name="okay_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="previous_action">Previous</string>
    <string name="send_action">Send</string>
    <string name="reply_action">Reply</string>
    <string name="reply_all_action">Reply all</string>
    <string name="delete_action">Delete</string>
    <string name="forward_action">Forward</string>
    <string name="favorite_action">Star</string>
    <string name="done_action">Done</string>
    <string name="create_action">Create new</string>
    <string name="delete_quick_response_action">Delete</string>
    <string name="quick_responses_empty_view">No quick responses.</string>
    <string name="discard_action">Discard</string>
    <string name="save_draft_action">Save draft</string>
    <string name="show_quick_text_list_dialog_action">Insert quick response</string>
    <string name="read_action">Mark read</string>
    <string name="unread_action">Mark unread</string>
    <string name="set_star_action">Add star</string>
    <string name="remove_star_action">Remove star</string>
    <string name="refresh_action">Refresh</string>
    <string name="add_account_action">Add account</string>
    <string name="compose_action">Compose</string>
    <string name="search_action">Search</string>
    <string name="account_settings_action">Account settings</string>
    <string name="settings_action">Settings</string>
    <string name="menu_folder_options">Sync options</string>
    <string name="mark_as_unread_action">Mark as unread</string>
    <string name="move_action">Move</string>
    <string name="plus_cc_label">+ Cc/Bcc</string>
    <string name="add_cc_bcc_menu">Add Cc/Bcc</string>
    <string name="add_file_attachment">Attach file</string>
    <string name="close_action">Close</string>
    <string name="message_list_send_pending_messages_action">Send all messages</string>
    <string name="choose_attachment_dialog_title">Choose attachment</string>
    <string name="move_to_folder_dialog_title">Move to</string>
    <string name="status_loading_messages">Loading messages\u2026</string>
    <string name="status_network_error">Connection problem.</string>
    <string name="error_loading_message_body">Couldn\'t load the message text. The message
        may be too large to view.</string>
    <plurals name="move_messages">
        <item quantity="one">Move message</item>
        <item quantity="other">Move messages</item>
    </plurals>
    <string name="cannot_move_protocol_not_supported_toast">Move isn\'t supported on POP3 accounts.
        </string>
    <string name="cannot_move_multiple_accounts_toast">Can\'t move because selection contains multiple
        accounts.</string>
    <string name="cannot_move_special_mailboxes_toast">Messages in Drafts, Outbox, and Sent can\'t be
        moved.</string>
    <plurals name="notification_new_one_account_fmt">
        
        <item quantity="one"><xliff:g id="unread_message_count" example="1">%1$d</xliff:g> unread (<xliff:g id="account">%2$s</xliff:g>)</item>

        
        <item quantity="few"><xliff:g id="unread_message_count" example="2">%1$d</xliff:g> unread (<xliff:g id="account">%2$s</xliff:g>)</item>

        
        <item quantity="other"><xliff:g id="unread_message_count" example="279">%1$d</xliff:g> unread (<xliff:g id="account">%2$s</xliff:g>)</item>
    </plurals>
    <plurals name="notification_new_multi_account_fmt">
        
        <item quantity="few">in <xliff:g id="number_accounts" example="2">%d</xliff:g> accounts</item>
        
        <item quantity="other">in <xliff:g id="number_accounts" example="10">%d</xliff:g> accounts</item>
    </plurals>
    <string name="notification_to_account">to <xliff:g id="receiver_name"
            example="Main">%1$s</xliff:g></string>
    <string name="notification_multiple_new_messages_fmt">
        <xliff:g example="2">%1$d</xliff:g> new messages</string>
    <string name="account_name_display_all">All accounts</string>
    <plurals name="number_of_accounts">
        <item quantity="one"><xliff:g id="num_accounts" example="1">%1$d</xliff:g> account</item>
        <item quantity="other"><xliff:g id="num_accounts" example="2">%1$d</xliff:g> accounts</item>
    </plurals>
    <string name="mailbox_name_server_inbox" translatable="false">Inbox</string>
    <string name="mailbox_name_server_outbox" translatable="false">Outbox</string>
    <string name="mailbox_name_server_drafts" translatable="false">Drafts</string>
    <string name="mailbox_name_server_trash" translatable="false">Trash</string>
    <string name="mailbox_name_server_sent" translatable="false">Sent</string>
    <string name="mailbox_name_server_junk" translatable="false">Junk</string>
    <string name="mailbox_name_display_inbox">Inbox</string>
    <string name="mailbox_name_display_outbox">Outbox</string>
    <string name="mailbox_name_display_drafts">Drafts</string>
    <string name="mailbox_name_display_trash">Trash</string>
    <string name="mailbox_name_display_sent">Sent</string>
    <string name="mailbox_name_display_junk">Junk</string>
    <string name="mailbox_name_display_unread">Unread</string>
    <string name="picker_mailbox_name_all_unread">Inbox (unread)</string>
    <string name="picker_mailbox_name_all_inbox">Inbox (all)</string>
    <string name="picker_combined_view_fmt">Combined view (<xliff:g id="count">%s</xliff:g>)</string>
    <plurals name="picker_combined_view_account_count">
        <item quantity="one"  ><xliff:g id="account_count" example="1">%d</xliff:g> account</item>
        <item quantity="other"><xliff:g id="account_count" example="9">%d</xliff:g> accounts</item>
    </plurals>
    <string name="debug_version_fmt">Version: <xliff:g id="version">%s</xliff:g></string>
    <string name="debug_enable_debug_logging_label" translatable="false">
        Enable extra debug logging?</string>
    <string name="debug_enable_verbose_logging_label" translatable="false">
        Enable extremely verbose logging?</string>
    <string name="debug_enable_file_logging_label" translatable="false">
        Enable sd card logging?</string>
    <string name="debug_clear_webview_cache" translatable="false">
        Clear WebView cache</string>
    <string name="debug_disable_graphics_acceleration_label" translatable="false">
        Disable hardware graphics acceleration</string>
    <string name="debug_force_one_minute_refresh_label" translatable="false">
        Force 1-minute refresh for POP/IMAP</string>
    <string name="debug_enable_strict_mode_label" translatable="false">
        Enable strict mode (with logging)</string>
    <string name="account_folder_list_summary_inbox">Inbox</string>
    <string name="account_folder_list_summary_starred">Starred</string>
    <string name="account_folder_list_summary_drafts">Drafts</string>
    <string name="account_folder_list_summary_outbox">Outbox</string>
    <string name="mailbox_list_account_selector_combined_view">Combined view</string>
    <string name="mailbox_list_account_selector_show_all_folders">Show all folders</string>
    <string name="mailbox_list_account_selector_account_header">Accounts</string>
    <string name="mailbox_list_account_selector_mailbox_header_fmt">
        Recent folders (<xliff:g id="email_address">%s</xliff:g>)</string>
    <string name="mailbox_list_user_mailboxes">All folders</string>
    <string name="mailbox_list_recent_mailboxes">Recent folders</string>
    <string name="message_subject_description">Subject</string>
    <string name="message_is_empty_description">No subject</string>
    <string name="message_list_load_more_messages_action">Load more messages</string>
    <string name="message_view_invite_text">Going?</string>
    <string name="message_view_invite_accept">" Yes"</string>
    <string name="message_view_invite_maybe">" Maybe"</string>
    <string name="message_view_invite_decline">" No"</string>
    <string name="message_view_move_to_newer">Newer</string>
    <string name="message_view_move_to_older">Older</string>
    <string name="account_setup_incoming_username_label">Username</string>
    <string name="account_setup_incoming_server_label">Server</string>
    <string name="account_setup_incoming_port_label">Port</string>
    <string name="account_setup_incoming_security_label">Security type</string>
    <string name="account_setup_incoming_delete_policy_label">Delete email from server</string>
    <string name="account_setup_incoming_imap_path_prefix_label">IMAP path prefix</string>
    <string name="account_setup_incoming_imap_path_prefix_hint">Optional</string>
    <string name="account_setup_exchange_device_id_label">Mobile Device ID</string>
    <string name="account_setup_options_mail_check_frequency_label">Inbox checking frequency</string>
    <string name="account_setup_options_default_label">Send email from this account by default</string>
    <string name="account_setup_options_notify_label">Notify me when email arrives</string>
    <string name="account_setup_options_sync_contacts_label">Sync contacts from this account</string>
    <string name="account_setup_options_sync_calendar_label">Sync calendar from this account</string>
    <string name="account_setup_options_sync_email_label">Sync email from this account</string>
    <string name="account_setup_options_background_attachments_label">
        Automatically download attachments when connected to Wi-Fi</string>
    <string name="account_setup_options_mail_window_label">Days to sync</string>
    <string name="account_settings_default_label">Default account</string>
    <string name="account_settings_default_summary">Send email from this account by default</string>
    <string name="account_settings_notify_label">Email notifications</string>
    <string name="account_settings_notify_summary">Send notification when email arrives</string>
    <string name="account_settings_mail_check_frequency_label">Inbox check frequency</string>
    <string name="account_settings_incoming_label">Incoming settings</string>
    <string name="account_settings_outgoing_label">Outgoing settings</string>
    <string name="account_settings_description_label">Account name</string>
    <string name="account_settings_name_label">Your name</string>
    <string name="account_settings_signature_label">Signature</string>
    <string name="account_settings_notifications">Notification settings</string>
    <string name="account_settings_sync_contacts_enable">Sync contacts</string>
    <string name="account_settings_sync_contacts_summary">Sync contacts for this account</string>
        <string name="account_settings_sync_calendar_enable">Sync calendar</string>
    <string name="account_settings_sync_calendar_summary">Sync calendar event for this account</string>
    <string name="account_settings_vibrate_when_label">Vibrate</string>
    <string name="account_settings_vibrate_when_summary">Also vibrate when email arrives</string>
    <string name="account_settings_vibrate_when_dlg_title">Vibrate</string>
    <string name="account_settings_ringtone">Choose ringtone</string>
    <string name="account_settings_servers">Server settings</string>
</resources>