<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <TextView
        android:text="@string/account_setup_options_mail_check_frequency_label"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/account_setup_label_text" />
    <Spinner
        android:id="@+id/account_check_frequency"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />
    <LinearLayout
        android:id="@+id/account_sync_window_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >
        <TextView
            android:id="@+id/account_sync_window_label"
            android:text="@string/account_setup_options_mail_window_label"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/account_setup_label_text" />
        <Spinner
            android:id="@+id/account_sync_window"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </LinearLayout>
    <CheckBox
        android:id="@+id/account_notify"
        style="@style/account_setup_checkbox"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/account_setup_options_notify_label" />
    <CheckBox
        android:id="@+id/account_sync_contacts"
        style="@style/account_setup_checkbox"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/account_setup_options_sync_contacts_label"
        android:visibility="gone" />
    <CheckBox
        android:id="@+id/account_sync_calendar"
        style="@style/account_setup_checkbox"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/account_setup_options_sync_calendar_label"
        android:visibility="gone" />
    <CheckBox
        android:id="@+id/account_sync_email"
        style="@style/account_setup_checkbox"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/account_setup_options_sync_email_label" />

    <CheckBox
        android:id="@+id/account_background_attachments"
        style="@style/account_setup_checkbox"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/account_setup_options_background_attachments_label" />
</LinearLayout>