<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- Incoming server settings - default - see layout-xlarge/ for XL variant -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical" >

    <TextView
        android:text="@string/account_setup_incoming_username_label"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/account_setup_label_text" />
    <EditText
        android:id="@+id/account_username"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/account_setup_incoming_username_label"
        android:inputType="textEmailAddress" />

    <com.android.email.activity.setup.AuthenticationView
        android:id="@+id/authentication_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <include
        android:id="@+id/client_certificate_selector"
        layout="@layout/client_certificate_selector"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/device_id_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:paddingTop="@dimen/setup_label_text_padding_top">

        <TextView
            android:text="@string/account_setup_exchange_device_id_label"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/device_id"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffbebebe" />

    </LinearLayout>

    <!-- This text may be changed in code if the server is IMAP, etc. -->
    <TextView
        android:id="@+id/account_server_label"
        android:text="@string/account_setup_incoming_server_label"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/account_setup_label_text" />
    <!-- Note: we use inputType=textUri as the closest approximation to a server name -->
    <!-- This contentDescription may be changed in code if the server is IMAP, etc. -->
    <EditText
        android:id="@+id/account_server"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/account_setup_incoming_server_label"
        android:inputType="textUri" />
    <TextView
        android:text="@string/account_setup_incoming_port_label"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/account_setup_label_text" />
    <EditText
        android:id="@+id/account_port"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/account_setup_incoming_port_label"
        android:inputType="number" />
    <TextView
        android:text="@string/account_setup_incoming_security_label"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/account_setup_label_text" />
    <Spinner
        android:id="@+id/account_security_type"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:contentDescription="@string/account_setup_incoming_security_label" />
    <TextView
        android:id="@+id/account_delete_policy_label"
        android:text="@string/account_setup_incoming_delete_policy_label"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/account_setup_label_text" />
    <Spinner
        android:id="@+id/account_delete_policy"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:contentDescription="@string/account_setup_incoming_delete_policy_label" />

    <LinearLayout
        android:id="@+id/imap_path_prefix_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:text="@string/account_setup_incoming_imap_path_prefix_label"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/account_setup_label_text" />
        <EditText
            android:id="@+id/imap_path_prefix"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/account_setup_incoming_imap_path_prefix_hint"
            android:inputType="text" />
    </LinearLayout>
</LinearLayout>
