<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/invite_section"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/text_box"
    android:gravity="center_vertical" 
    android:visibility="gone" >
    <TextView
        android:id="@+id/invite_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dip"
        android:singleLine="true"
        android:ellipsize="end"
        android:text="@string/message_view_invite_text"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:layout_alignParentTop="true" />
    <Button
        android:id="@+id/decline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:text="@string/message_view_invite_decline"
        android:singleLine="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/invite_info"
        android:layout_marginTop="6dip" />
    <Button
        android:id="@+id/maybe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:text="@string/message_view_invite_maybe"
        android:singleLine="true"
        android:layout_toLeftOf="@id/decline"
        android:layout_below="@id/invite_info"
        android:layout_marginTop="6dip" />
    <Button
        android:id="@+id/accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:text="@string/message_view_invite_accept"
        android:singleLine="true"
        android:layout_toLeftOf="@id/maybe"
        android:layout_below="@id/invite_info"
        android:layout_marginTop="6dip" />
</RelativeLayout>
